--- a/guessingGame.html
+++ b/guessingGame.html
@@ -11,7 +11,7 @@
     <div class="gameContainer">
 
         <header class="upperContainer">
-            <div id="playAgain">Play Again</div>
+            <button id="playAgain" onClick="reload()">Play Again</button>
             <div id="between1To100">(Between 1 and 100)</div>
         </header>
         <section class="middleContainer">
